--- a/app/views/google_spreadsheets/_modal.html.erb
+++ b/app/views/google_spreadsheets/_modal.html.erb
@@ -1,43 +1,46 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+<%# @speakers.each_with_index do |index, i| %>
+<!--  <div class="modal fade" id="exampleModal<%#= index %><%= i %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel<%#= index %><%= i %>" aria-hidden="true">-->
+<!--    <div class="modal-dialog" role="document">-->
+<!--      <div class="modal-content">-->
+<!--        <div class="modal-header">-->
+<!--          <h5 class="modal-title" id="exampleModalLabel">Fill the form please</h5>-->
+<!--          <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+<!--            <span aria-hidden="true">&times;</span>-->
+<!--          </button>-->
+<!--        </div>-->
 
-      <%= form_tag google_spreadsheets_path do %>
-        <div class="modal-body">
-          <div class="form-group ">
-            <%= label_tag :name, 'Имя' %>
-            <%= text_field_tag :name %>
-          </div>
+        <%#= form_tag google_spreadsheets_path do %>
+<!--          <div class="modal-body">-->
+<!--            <div class="form-group ">-->
+              <%#= label_tag :name, 'Name' %>
+              <%#= text_field_tag :name %>
+<!--            </div>-->
 
-          <div class="form-group ">
-            <%= label_tag :phone, 'Номер телефона' %>
-            <%= telephone_field_tag :phone %>
-          </div>
+<!--            <div class="form-group ">-->
+              <%#= label_tag :phone, 'Phone number' %>
+              <%#= telephone_field_tag :phone %>
+<!--            </div>-->
 
-          <div class="form-group ">
-            <%= label_tag :email, 'Email' %>
-            <%= text_field_tag :email %>
-          </div>
+<!--            <div class="form-group ">-->
+              <%#= label_tag :email, 'Email' %>
+              <%#= text_field_tag :email %>
+<!--            </div>-->
 
-          <div class="form-group ">
-            <%= label_tag :note, 'Что Вас интересует?'  %>
-            <%= text_area_tag :note %>
-          </div>
+<!--            <div class="form-group ">-->
+              <%#= label_tag :note, 'Note'  %>
+              <%#= text_area_tag :note %>
+<!--            </div>-->
 
-            <%= hidden_field_tag :timeslot, timeslot  %>
-            <%= hidden_field_tag :speaker, speaker  %>
-        </div>
+            <%#= hidden_field_tag :timeslot, timeslot  %>
+            <%#= hidden_field_tag :speaker, speaker  %>
+<!--          </div>-->
 
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <%= submit_tag 'Filling', class: 'btn btn-primary'%>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
+<!--          <div class="modal-footer">-->
+<!--            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>-->
+            <%#= submit_tag 'Filling', class: 'btn btn-primary'%>
+<!--          </div>-->
+        <%# end %>
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<%# end %>
