Add ability to group speakers

--- a/app/views/google_spreadsheets/index.html.erb
+++ b/app/views/google_spreadsheets/index.html.erb
@@ -1,96 +1,23 @@
 <div class="container">
-  <div class="btn_ticket">
-    <% if @state == 'need_registration' %>
-      <div class="modal fade modal__no" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <h4>Unfortunately, you are not the owner of GOLD ticket or VIP</h4>
-              <p><a href="https://outsource-people.com/#tickets-box" class="btn btn-primary mb-2"
-                title="Buy ticket" data-content="Popover body content is set in this attribute.">Buy ticket</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    <% elsif @state == 'already_registered'%>
-      <div class="alert alert-danger alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <h4>You are already registered more than 3 times</h4>
-      </div>
-    <% else @state == 'successfully_registered' %>
-      <div class="alert alert-success alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <h4>You have been successfully registered</h4>
-      </div>
-    <% end %>
-  </div>
+  <%= render partial: 'registration', locals: { state: @state } %>
+
   <div class="wrapper">
-    <%# @speakers.group_by {|t| t[4]}.each do |date, speaker| %>
-<!--      <h1><%#= date.to_s %></h1>-->
-    <% @speakers.each_with_index do |speaker, index| %>
-      <h3><%= speaker[0] %></h3>
-      <div class="text-center wrapper__items">
-        <% speaker[1..3].each_with_index do |timeslot, i|%>
-          <div class="wrapper__item" >
-            <div class="event" data-toggle="modal" data-target="#exampleModal<%= index %><%= i %>" >
-              <%= timeslot %>
-            </div>
-            <%#= render 'modal', speaker: speaker[0], timeslot: timeslot, index: index, i: i %>
-
-            <div class="modal fade" id="exampleModal<%= index %><%= i %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel<%= index %><%= i %>" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Fill the form please</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-
-                  <%= form_tag google_spreadsheets_path do %>
-                    <div class="modal-body">
-                      <div class="form-group ">
-                        <%= label_tag :name, 'Name' %>
-                        <%= text_field_tag :name %>
-                      </div>
-
-                      <div class="form-group ">
-                        <%= label_tag :phone, 'Phone number' %>
-                        <%= telephone_field_tag :phone %>
-                      </div>
-
-                      <div class="form-group ">
-                        <%= label_tag :email, 'Email' %>
-                        <%= text_field_tag :email %>
-                      </div>
-
-                      <div class="form-group ">
-                        <%= label_tag :note, 'Note'  %>
-                        <%= text_area_tag :note %>
-                      </div>
-                      <%= speaker %>
-                      <%= hidden_field_tag :timeslot, timeslot  %>
-                      <%= hidden_field_tag :speaker, speaker[0]  %>
-                    </div>
-
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                      <%= submit_tag 'Filling', class: 'btn btn-primary'%>
-                    </div>
-                  <% end %>
-                </div>
+    <% @speakers_grouped_by.each_with_index do |(date, speaker), inx|  %>
+      <div class="date"><%= date.to_s %></div>
+      <% speaker.each_with_index do |speaker, index| %>
+        <h3><%= speaker[0] %></h3>
+        <div class="text-center wrapper__items">
+          <% speaker[1..3].each_with_index do |timeslot, i|%>
+            <div class="wrapper__item" >
+              <div class="event" data-toggle="modal" data-target="#exampleModal<%= [index, i, inx].join('') %>" >
+                <%= timeslot %>
               </div>
+              <%= render 'modal', speaker: speaker[0], timeslot: timeslot, index: index, i: i, inx: inx %>
             </div>
-          </div>
-        <% end %>
-      </div>
+          <% end %>
+        </div>
+      <% end %>
     <% end %>
-    <%# end %>
   </div>
 </div>
 
